feat: support products pump drainer
